--- a/css_files/websitestyle1.css
+++ b/css_files/websitestyle1.css
@@ -1,12 +1,7 @@
-body
-{
-    background-color: indigo;
-    color: white;
-}
 
 #photo
 {
-    text-align: center;
+    text-align: left;
 }
 
 table
